--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   "dependencies": {
     "dotenv": "^16.4.5",
     "node-telegram-bot-api": "^0.66.0",
-    "web3": "^4.14.0"
+    "web3": "^1.10.4",
+    "web3-eth-contract": "^4.7.0"
   },
   "devDependencies": {
     "@types/node-telegram-bot-api": "^0.64.7"
